правки по результатам собственных тестов
